--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -391,11 +391,11 @@ valine:
 
 # Support for youyan comments system.
 # You can get your uid from http://www.uyan.cc
-youyan_uid: MTAyMC80MzU2My8yMDEwMg==
+# youyan_uid: 
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-#livere_uid: your uid
+livere_uid: MTAyMC80MzU2My8yMDEwMg==
 
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
